--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,3 +1,9 @@
 # Economy type: Vault
 economy: "Vault"
 
+# Here you can modify default shop command
+shop-command:
+  name: "shop"
+  aliases:
+    - "myshop"
+    - "blockshop"
